[package]
name = "ffmpeg-lh"
version = "0.1.0"
authors = ["Kirill <elephanttalk@protonmail.com>"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]
default-features = false
