[package]
name = "ffmpeg-lh"
version = "0.1.0"
authors = ["Kirill I <elephanttalk@protonmail.com>"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.clap]
version = "2.33.0"
default-features = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
#debug-assertions = false
codegen-units = 1
strip = "symbols"
