[package]
name = "ffmpeg-loudnorm-helper"
version = "0.2.0"
authors = ["Kirill I <elephanttalk@protonmail.com>"]

[[bin]]
name = "ffmpeg-lh"
path = "src/main.rs"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde_json = ">=1.0"
serde = { version = ">=1.0", features = ["derive"] }

[dependencies.clap]
version = ">=3.0.0"
features = ["cargo"]
default-features = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
codegen-units = 1
strip = "symbols"
